# espio

./: settings.gradle
AMP6500SDK 2/Workspace/DemoAppEMV/AMP POS v02.02.005DEM/DemoAppEMV_0100xx_Android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
AMP6500SDK 2/Workspace/DemoAppEMV/AMP POS v02.02.005DEM/DemoAppEMV_0100xx_Android/app/src/androidTest/java/amp/amp8000/baseapp/: ExampleInstrumentedTest.java
AMP6500SDK 2/Workspace/DemoAppEMV/AMP POS v02.02.005DEM/DemoAppEMV_0100xx_Android/app/src/main/: AndroidManifest.xml
AMP6500SDK 2/Workspace/DemoAppEMV/AMP POS v02.02.005DEM/DemoAppEMV_0100xx_Android/app/src/main/assets/: CAKeys  CAKeys.xml  ENTRY_POINT  PROCESSING  QuickChip.cfg  TERMINAL  agnos.ini  lang.ini  menu.xml
AMP6500SDK 2/Workspace/DemoAppEMV/AMP POS v02.02.005DEM/DemoAppEMV_0100xx_Android/app/src/main/cpp/CoreSrc/Include/: CoreAgnosEMVTrans.h  CoreAgnosEmvCtlsFunc.h  CoreAgnosEmvFunc.h  CoreAppObj.h  CoreCardUtils.h  CoreComms.h  CoreConfig.h  CoreDefines.h  CoreFlow.h  CoreScreens.h  CoreTransObj.h  CoreUtils.h
AMP6500SDK 2/Workspace/DemoAppEMV/AMP POS v02.02.005DEM/DemoAppEMV_0100xx_Android/app/src/main/cpp/CoreSrc/Source/Agnos/: CoreAgnosEmvCtlsFunc.cpp  CoreAgnosEmvFunc.cpp  CoreAgnosEmvTrans.cpp
AMP6500SDK 2/Workspace/DemoAppEMV/AMP POS v02.02.005DEM/DemoAppEMV_0100xx_Android/app/src/main/cpp/CoreSrc/Source/Card/: CoreCardUtils.cpp
AMP6500SDK 2/Workspace/DemoAppEMV/AMP POS v02.02.005DEM/DemoAppEMV_0100xx_Android/app/src/main/cpp/Project/Include/: AMPBaseConsole.h  AMPDefine.h  AMPUtils.h  AmpBaseAndroidIF.h  AmpEmvL2AndroidIF.h  EMVTags.h  Project.h  Screens.h  SizeDefines.h  TransUtils.h  Transactions.h
AMP6500SDK 2/Workspace/DemoAppEMV/AMP POS v02.02.005DEM/DemoAppEMV_0100xx_Android/app/src/main/cpp/Project/Source/: AMPUtils.cpp  AmpBaseAndroidIF.cpp  AmpEmvL2AndroidIF.cpp  Purchase.cpp  Screens.cpp
AMP6500SDK 2/Workspace/DemoAppEMV/AMP POS v02.02.005DEM/DemoAppEMV_0100xx_Android/app/src/main/java/AmpBaseInterface/: AmpBaseCB.java  AmpBaseCBIF.java  AmpBaseInterface.java
AMP6500SDK 2/Workspace/DemoAppEMV/AMP POS v02.02.005DEM/DemoAppEMV_0100xx_Android/app/src/main/java/AmpEmvL2Android/: AmpEmvCB.java  AmpEmvCBIF.java  AmpEmvL2IF.java
AMP6500SDK 2/Workspace/DemoAppEMV/AMP POS v02.02.005DEM/DemoAppEMV_0100xx_Android/app/src/main/res/drawable/: button_grey.xml  button_pale_azure.xml  button_turquoise.xml  demo_mode_border.xml  home_button_border.xml  ripple_effect.xml  ripple_effect_sub_sub.xml
AMP6500SDK 2/Workspace/DemoAppEMV/AMP POS v02.02.005DEM/DemoAppEMV_0100xx_Android/app/src/main/res/layout/: activity_amount_summary.xml  activity_amountentry.xml  activity_amountentry_regular.xml  activity_card_entry.xml  activity_cardentry_manual.xml  activity_check_update.xml  activity_cvventry_manual.xml  activity_emv_notifier.xml  activity_emv_selection.xml  activity_expiryentry_manual.xml  activity_generic_list.xml  activity_listview.xml  activity_login.xml  activity_main.xml  activity_menu.xml  activity_notification.xml  activity_notifier.xml  activity_selection.xml  activity_sub_sub_menu.xml  activity_sub_sub_menu_three_plus.xml  activity_tms_notifier.xml  activity_tms_settings.xml  activity_transaction_details_print.xml  activity_turn_unit_customer.xml  activity_user_input_entry.xml  button_cancel.xml  button_dollar.xml  button_no.xml  button_none_teal.xml  button_ok.xml  button_percent.xml  button_print.xml  button_summary_cancel.xml  button_summary_next.xml  button_summary_previous.xml  button_void.xml  button_yes.xml  demo_mode.xml  fragment_admin_password_set.xml  fragment_password_admin_entry.xml  (+11 more)
AMP6500SDK 2/Workspace/DemoAppEMV/AMP POS v02.02.005DEM/DemoAppEMV_0100xx_Android/app/src/main/res/values/: arrays.xml  colors.xml  dimens.xml  languages.xml  strings.xml  styles.xml
AMP6500SDK 2/Workspace/DemoAppEMV/AMP POS v02.02.005DEM/DemoAppEMV_0100xx_Android/app/src/main/res/values-fa/: strings.xml
AMP6500SDK 2/Workspace/DemoAppEMV/AMP POS v02.02.005DEM/DemoAppEMV_0100xx_Android/app/src/main/res/xml/: pref_general.xml
app/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
(+639 files in other folders)
